--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
   },
   "packageManager": "pnpm@8.6.0",
   "dependencies": {
+    "@mui/x-date-pickers": "^8.22.0",
     "@types/jsonwebtoken": "^9.0.7",
     "async-mutex": "^0.5.0",
+    "dayjs": "^1.11.19",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "redis": "^5.8.2",
