--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
     "type-check": "turbo run type-check",
-    "clean": "turbo run clean && rm -rf node_modules .turbo",
+    "clean": "turbo run clean && rm -rf node_modules .turbo", 
     "docker:up": "docker-compose up --build",
     "docker:down": "docker-compose down",
+    "docker:local:up": "docker-compose -f docker-compose.full-local.yml up -d",
+    "docker:local:down": "docker-compose -f docker-compose.full-local.yml down",
+    "docker:local:logs": "docker-compose -f docker-compose.full-local.yml logs -f",
+    "docker:local:restart": "docker-compose -f docker-compose.full-local.yml restart",
+    "docker:local:rebuild": "docker-compose -f docker-compose.full-local.yml up --build -d",
     "prepare": "husky"
   },
   "lint-staged": {
